--- a/redux-simple/package.json
+++ b/redux-simple/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "@types/react-html-parser": "^2.0.6",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^9.1.1"
   },
   "devDependencies": {
